# claude-memory

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLA-signatures.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.plan-c  LICENSE  NOTICE  PERFORMANCE.md  README.md  RELEASE_NOTES_v0.6.4.md  RELEASE_NOTES_v0.7.0.md  REMEDIATIONv0631.md  ROADMAP.md  ROADMAP2.md  SECURITY.md  ai-memory.spec  clippy.toml  entrypoint.plan-c.sh  install.ps1  install.sh  nfpm.yaml  server.json
.cargo/: audit.toml
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.yml  release-body-v0.6.4.md
.github/workflows/: batman-mode-acceptance.yml  bench.yml  ci.yml  coverage.yml  docs.yml  fuzz.yml  publish-sdks.yml  release.yml  session-boot-lifetime.yml  token-budget.yml  tool-count-drift.yml  yank.yml
audits/v063-coverage-80pct/: CAMPAIGN-FINAL-METRICS.md  V0.7.0-ASSERTIONS.md  closer-a9-summary.md  closer-c5-summary.md  closer-d6-summary.md  closer-f-coverage.json  closer-f9-summary.md  closer-h8a-summary.md  closer-h8b-summary.md  closer-h8c-summary.md  closer-h8d-summary.md  closer-i7-summary.md  closer-l10a-summary.md  closer-l10b-summary.md  closer-m-coverage.json  closer-m9-summary.md  closer-mprime-coverage.json  closer-mprime-summary.md  closer-s11b-summary.md  closer-s5-summary.md  closer-t4-coverage.json  closer-t4-summary.md  closer-w12a-summary.md  closer-w12b-summary.md  closer-w12c-summary.md  closer-w12d-coverage.json  closer-w12d-summary.md  closer-w12f-summary.md  closer-w12g-summary.md  closer-w12h-summary.md  closer-x5-summary.md
audits/v063-coverage-strategy/: MUTANTS.md
benches/: age_vs_cte.rs  harness_bench.rs  longmemeval_reflection.rs  recall.rs  reflect.rs  reranker_throughput.rs
benchmarks/: v0.6.4-cross-harness.md
benchmarks/competitive-benchmarks/: README.md  expected_output.md  harness.sh
benchmarks/longmemeval/: harness.py  harness_99.py  harness_blazing.py  harness_fast.py  methodology.md  results.md  run_variants.sh
benchmarks/longmemeval_reflection/: dataset.rs  runner.rs
coverage/: check-thresholds.sh  gap-closures.md  policy.md  thresholds.toml  tier-classification.toml
debian/: changelog  control  copyright  rules
docs/: ADMIN_GUIDE.md  ADR-0001-quorum-replication.md  ADR-0002-kg-schema-v15-backward-incompat.md  ADR-0003-kg-invalidation-eventual-consistency.md  AI_DEVELOPER_GOVERNANCE.md  AI_DEVELOPER_WORKFLOW.md  AI_NHI_PM_V9_RECORDING_DISCIPLINE.md  API_REFERENCE.md  ARCHITECTURAL_LIMITS.md  BASELINE-v0.6.3.1.md  CLI_REFERENCE.md  DEVELOPER_GUIDE.md  ENGINEERING_STANDARDS.md  GLOSSARY.md  INSTALL.md  MIGRATION-v0.6.2-to-v0.6.3.md  MIGRATION_v0.6.4.md  MIGRATION_v0.7.md  PHASE-1.md  QUICKSTART.md  README.md  RECURSION-PHILOSOPHY.md  RECURSIVE_LEARNING.md  ROADMAP-ladybug.md  RUNBOOK-adapter-selection.md  RUNBOOK-chaos-campaign.md  RUNBOOK-curator-soak.md  RUNBOOK-digitalocean-testing.md  RUNBOOK-ollama-kv-tuning.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE.md  a2a-harness-integration.md  a2a-messaging.html  adoption.html  agent-identity.html  agent-skills.md  ai-nhi-pm-v9.html  architectures-t1.html  architectures-t2.html  (+58 more)
docs/integrations/: zed.md  (+21 more)
examples/: atomise_roundtrip.rs  gen_tls_fixtures.rs  multistep_ingest_roundtrip.rs  offload_roundtrip.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_namespace.rs  fuzz_validate.rs
hooks/: session-start.sh
ops/: RUNBOOK.md  com.alphaone.claude-campaign-fate.plist  com.alphaone.claude-campaign.plist  run-campaign.sh  start.sh  stop.sh
packaging/: docker-compose.postgres.yml
scripts/: batman-bench.sh  batman-mode-acceptance.ps1  batman-mode-acceptance.sh  batman-warmup.sh  dogfood-rebuild.sh  install-batman-active.ps1  install-batman-active.sh  post-ship-converge.sh  postgres-droplet-reinit.sh  reproduce-recursive-learning.sh  run-session-boot-lifetime-tests.sh  t0-orchestrate.sh  update-adoption-metrics.sh
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/ai_memory/: __init__.py  _common.py  async_client.py  client.py  errors.py  models.py  profile.py  webhooks.py
sdk/python/tests/: __init__.py  test_client.py  test_profile.py
src/: approvals.rs  attestation.rs  audit.rs  autonomy.rs  bench.rs  canonical_workload.rs  color.rs  compress.rs  config.rs  curator.rs  daemon_runtime.rs  db.rs  embeddings.rs  errors.rs  federation.rs  handlers.rs  harness.rs  hnsw.rs  identity.rs  lib.rs  llm.rs  log_paths.rs  logging.rs  main.rs  mcp.rs  metrics.rs  migrate.rs  mine.rs  models.rs  permissions.rs  profile.rs  quotas.rs  replication.rs  reranker.rs  signed_events.rs  sizes.rs  subscriptions.rs  tls.rs  toon.rs  transcripts.rs  (+1 more)
tests/: a2a_campaign_round1.rs  admin_action_forensic_audit.rs  admin_audit_chain_913.rs  age_cte_equivalence.rs  agent_id_spoof_901_regression.rs  approval_reflect.rs  archive_serialization.rs  atomisation.rs  auto_atomise.rs  b3_precompute_doesnt_block_serve.rs  b4_config_cleanup.rs  boot_lifecycle.rs  boot_primitive_contract.rs  budget_tokens.rs  c2_tool_docs_field.rs  c3_no_inline_examples.rs  calibration_t0.rs  capabilities_v2.rs  capabilities_v3.rs  capabilities_v3_l3_5.rs  check_constraint_relation.rs  cli.rs  cli_governance_check_action.rs  cli_install_pretool_hook.rs  cli_integration.rs  cli_schema_init.rs  cli_serve_help_text.rs  cli_sync_coverage.rs  cli_verify_chain.rs  cluster_f_perf_regressions.rs  confidence_tier.rs  config_precedence.rs  cov_17_skills_federation_roundtrip.rs  cov_18_offload_ttl_postgres.rs  cross_tenant_subscriptions.rs  curator.rs  data_integrity_v17.rs  deferred_audit_soak.rs  discovery_gate_t1_t3.rs  dispatch_integration.rs  (+187 more)
tools/auto-link-detector/: Cargo.toml  README.md
tools/auto-link-detector/src/: main.rs
tools/post-ship-converge/: Cargo.toml  README.md
tools/post-ship-converge/src/: main.rs
tools/t0-orchestrate/: Cargo.toml  README.md
tools/t0-orchestrate/src/: main.rs
tools/transcript-extractor/: Cargo.toml  README.md
tools/transcript-extractor/src/: main.rs
website/: docusaurus.config.ts  sidebars.ts
(+487 files in other folders)
