[package]
name = "ai-memory"
version = "0.7.0"
edition = "2024"
rust-version = "1.88"
authors = ["AlphaOne LLC"]
description = "AI-agnostic persistent memory system — MCP server, HTTP API, and CLI for any AI platform"
license = "Apache-2.0"
repository = "https://github.com/alphaonedev/ai-memory-mcp"
homepage = "https://alphaonedev.github.io/ai-memory-mcp/"
keywords = ["mcp", "ai", "memory", "sqlite", "llm"]
categories = ["artificial-intelligence", "command-line-utilities", "database"]
# v0.6.5 — keep the published crate under crates.io's 10 MiB compressed
# upload limit. v0.6.3 + v0.6.4 publishes failed silently with HTTP 503
# from the WAF because the package was 22 MiB compressed (140 MiB
# unpacked) — `audits/` alone was 140 MiB. We exclude everything that
# isn't required to compile the crate. include explicitly lists what
# stays so any new top-level directory must be opted in.
include = [
    "src/**/*",
    "benches/**/*",
    "examples/**/*",
    "migrations/**/*",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "PERFORMANCE.md",
]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "6"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"
rusqlite = { version = "0.32" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# v0.7 K10 — Approval API SSE endpoint adapts a `tokio::sync::broadcast`
# Receiver into the `futures_core::Stream` axum's `Sse` requires.
# `tokio-stream`'s `BroadcastStream` wrapper does that bridging, and
# `futures-core` exposes the `Stream` trait the wrapper implements.
# Pure Rust, dep-light, both are in the tokio family.
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# v0.6.3.1 (PR-5 / issue #487) — rolling file appender for the
# operational logging facility. Default-OFF; opt-in via
# `[logging] enabled = true` in config.toml. Uses the non-blocking
# writer so file I/O never stalls a tracing call site.
tracing-appender = "0.2"
# v0.6.3.1 (PR-5 / issue #487) — `ai-memory logs archive` compresses
# rotated operational logs past their retention horizon. Pure-Rust
# bindings via the `zstd` crate.
zstd = { version = "0.13", default-features = false }
uuid = { version = "1", features = ["v4", "v7"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
gethostname = "0.5"

# Native TLS for `serve` (Layer 1 — issue to be filed). axum-server
# + rustls. Accepts PEM cert + key from --tls-cert / --tls-key. No
# OpenSSL dep; rustls matches reqwest's rustls-tls choice already in
# use for the sync-daemon's outbound HTTPS.
axum-server = { version = "0.8", features = ["tls-rustls"] }
# rustls 0.23 requires an explicit CryptoProvider — `ring` matches
# reqwest's default for the sync-daemon, keeping a single provider
# across the process. PEM parsing is handled by
# `RustlsConfig::from_pem` so no separate rustls-pemfile dep (which
# is flagged unmaintained in the 2026 advisory DB).
rustls = { version = "0.23", features = ["ring"] }
# mTLS cert fingerprint allowlist (Layer 2) needs SHA-256 over the
# client cert DER. RustCrypto sha2 — same family as the HKDF we'll use
# for Layer 3 E2E encryption (#228).
sha2 = "0.10"
# v0.7.0 M1 — constant-time byte comparison for mTLS fingerprint
# allowlist membership. `subtle` is the RustCrypto ecosystem default
# (already pulled in transitively via ed25519-dalek / sha2 / etc); we
# promote it to a direct dep so `src/tls.rs` can compare a 32-byte
# fingerprint against every entry in the allowlist without leaking
# matching timing through the HashSet's hash-and-probe shape.
subtle = "2"

# v0.7 Track H — per-agent Ed25519 attested identity (H1). `ed25519-dalek`
# 2.x is the RustCrypto-maintained, pure-Rust, audit-friendly Ed25519
# implementation; same crate Solana, Diem, and the IETF COSE crowd use.
# Pulled in for the keypair lifecycle (`generate / save / load / list /
# export-pub`) under `src/identity/keypair.rs`. `rand_core = "0.6"` is
# its CSPRNG bound; we use its `OsRng` for keygen (matches the rest of
# RustCrypto's expectations). `base64` (URL-safe, no-padding) is the
# wire format for `export-pub` so an operator can paste a key into a
# remote allowlist without binary copy hazards. Hardware-backed key
# storage (TPM/HSM/Secure Enclave) is out of OSS scope per ROADMAP2.md
# and lives in the AgenticMem commercial layer.
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.22"
# v0.7 Track H — H2 outbound link signing. `ciborium` 0.2 provides
# RFC 8949 §4.2.1 deterministic CBOR encoding via `into_writer`
# (canonical sort of map keys + smallest-int encoding), the byte
# shape we sign over for Ed25519 attestation. Already pulled in
# transitively via the candle stack — promoted to a direct dep here
# so `src/identity/sign.rs` can rely on a stable version pin.
ciborium = "0.2"
# v0.7.0 L1-5 — SKILL.md YAML frontmatter parsing for the Agent Skills
# substrate. `serde_yaml` is the de-facto `serde`-native YAML backend;
# version 0.9 compiles to pure Rust (no C libyaml), making it compatible
# with the rest of the zero-C-dep policy.
serde_yaml = "0.9"

# Semantic embedding support
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
hf-hub = { version = "0.5", features = ["tokio"] }
tokenizers = { version = "0.22" }
instant-distance = "0.6"
# M5 — `native-tls` removed from reqwest features. Federation + Ollama
# only need rustls; keeping the OpenSSL/SecureTransport-backed
# `native-tls` provider in the binary is pure attack surface (and ships
# the macOS keychain integration we never use). Pin rustls as the sole
# TLS provider so a single audited stack handles all outbound HTTPS.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
toml = "0.8"

# v0.6.0.0 — Prometheus metrics endpoint at GET /metrics. Pure Rust, no
# transitive C deps. `protobuf` feature stays off; we emit text format
# only (which is what Prometheus scrapes by default via `Accept:
# text/plain`). Per sprint authorization #260.
prometheus = { version = "0.13", default-features = false }

# v0.6.3.1 (P6 / R1) — deterministic context-budgeted recall. tiktoken-rs
# exposes OpenAI's `cl100k_base` BPE which is also Anthropic's de-facto
# context-window tokenizer for budgeting purposes. Used post-rank in
# `memory_recall` when the caller supplies `budget_tokens`. Pure Rust,
# no C deps; the BPE table is embedded in the crate (~1.7 MB) so the
# tokenizer is offline-deterministic across all hosts. Per ROADMAP2.md
# R1 ("budget_tokens recall — Letta has it, we don't, we need it").
tiktoken-rs = "0.7"

# Issue #487 PR-6 — `ai-memory wrap` uses `tempfile::NamedTempFile`
# for the cross-platform `MessageFile` strategy (write the system
# message to a tempfile, hand the path to the wrapped agent CLI, and
# guarantee cleanup on parent exit). Pure-Rust, used by the production
# wrap subcommand so it's promoted from dev-dependencies into the main
# dep table. Same version pin as the existing dev-dep below.
tempfile = "3"

# v0.7 — Storage Abstraction Layer (SAL) deps. Gated behind the `sal`
# feature so default builds don't pull them. `async-trait` is the
# standard bridge for async methods on traits until stable Rust native
# AFIT is adopted across the codebase. `bitflags` is the ecosystem
# standard for `Capabilities`-style bitmask types. `thiserror` gives
# us the typed `StoreError` the red-team asked for on #222. All three
# are small, pure-Rust, MIT/Apache dual-licensed.
async-trait = { version = "0.1", optional = true }
bitflags = { version = "2", optional = true }
thiserror = { version = "2", optional = true }

# v0.7 — PostgresStore adapter deps. Gated behind `sal-postgres` which
# depends on the base `sal` feature. `sqlx` is the async Postgres driver
# (native rustls, no OpenSSL). `pgvector` is the official binding for
# the `vector` type used by the hybrid-recall path.
sqlx = { version = "0.8", optional = true, default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros"] }
pgvector = { version = "0.4", optional = true, features = ["sqlx"] }

# v0.6.0.0 — SQLite variant selection. Default builds the standard
# bundled SQLite (matching pre-v0.6.0.0 behavior byte-for-byte). The
# `sqlcipher` feature swaps the underlying DB to SQLCipher (SQLite +
# AES-256 encryption). The two are mutually exclusive at link time;
# pick one via `cargo build --no-default-features --features sqlcipher`.
# Operators who want encryption at rest also supply
# `--db-passphrase-file <path>` at daemon startup to unlock the DB.
[features]
default = ["sqlite-bundled"]
sqlite-bundled = ["rusqlite/bundled"]
sqlcipher = ["rusqlite/bundled-sqlcipher-vendored-openssl"]
# v0.7 — Storage Abstraction Layer. `sal` brings in the trait + SqliteStore
# adapter. `sal-postgres` layers on the Postgres/pgvector backend.
sal = ["dep:async-trait", "dep:bitflags", "dep:thiserror"]
sal-postgres = ["sal", "dep:sqlx", "dep:pgvector"]
# W11/S11b — opt-in feature for tests that pull large model weights at runtime
# (BERT cross-encoder, MiniLM, etc.). Off by default so CI doesn't download
# 80MB+ on every run.
test-with-models = []
# Issue #487 PR-3 — gated live-agent smoke tests. Off by default; enabled
# explicitly by the local runner script (`scripts/run-session-boot-
# lifetime-tests.sh`) when `E2E_AGENT_TESTS=1` AND the host has a `claude`
# binary on PATH plus a real `ANTHROPIC_API_KEY`. The contract + lifecycle
# tests under `tests/boot_*` and `tests/recipe_contract.rs` stay
# unconditional and load-bearing; this feature is for the optional
# end-to-end "did Claude actually see the seeded memory?" smoke.
e2e = []

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
uuid = { version = "1", features = ["v4", "v7"] }
serde_json = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
# Wave 4 (v0.6.3) — TLS test fixture generator. Pinned to an exact version
# so cert / key / fingerprint bytes stay stable across machines (rcgen's
# RNG is seeded but its DER encoding can shift between minor releases).
rcgen = { version = "=0.14.7", default-features = false, features = ["pem", "ring"] }
# W6 (v0.6.3) — re-declare tokio for tests with the `test-util` feature
# turned on so `tokio::test(start_paused = true)` and `tokio::time::advance`
# (used by the daemon_runtime gc/wal-checkpoint loop tests) compile. The
# production tokio dep keeps just "full" to avoid leaking the test-util
# surface into release binaries.
tokio = { version = "1", features = ["full", "test-util"] }
# W7 (v0.6.3) / I7 — binary-spawn integration tests. `assert_cmd` and
# `predicates` are the standard pair for CLI subprocess assertions; the
# production `reqwest` dep already has the `blocking` feature on, which
# the `serve` integration tests use to drive the daemon over HTTP from
# a synchronous test body.
assert_cmd = "2"
predicates = "3"
# W10 (v0.6.3) — `wiremock` lets the llm.rs tests stand up an in-process
# HTTP server speaking the Ollama API surface, so OllamaClient's blocking
# reqwest calls can be exercised end-to-end without any network or daemon.
# Used only by tests; never linked into the release binary.
wiremock = "0.6"
# v0.7 K10 — SSE integration tests need to pull individual body frames
# off an `http_body::Body` to assert event boundaries, which is exactly
# what `http_body_util::BodyExt::frame` exposes. Already in the
# transitive tree via axum/hyper; declared explicitly so the test
# imports compile without leaking the dep into the production crate.
http-body-util = "0.1"
# v0.7 J5 — direct sqlx access from `tests/age_cte_equivalence.rs` so
# the dual-path harness can seed `memory_links` rows and the AGE
# `memory_graph` projection without going through the SAL surface
# (`MemoryStore::link` returns `UnsupportedCapability` on the v0.7
# Postgres adapter — see `src/store/postgres.rs::link`). Same feature
# set as the production `sqlx` dep so both crates compile against an
# identical driver. Pulled in unconditionally so it's available to the
# integration test even when the `sal-postgres` cargo feature isn't
# selected at top-level — the test file itself is `#[cfg(feature =
# "sal-postgres")]` so default builds don't compile anything that
# touches sqlx.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono"] }
# `libc` for the SIGINT graceful-shutdown integration test on unix —
# already transitively in the dep tree via tokio, declared explicitly
# here so the test can `use libc::SIGINT` without `rustc_private` errors.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

# v0.6.3.1 (PR-5 / issue #487) — `audit::mark_append_only` invokes
# `libc::chflags` (BSD/macOS) and the `FS_IOC_SETFLAGS` ioctl (Linux)
# to mark the audit log as append-only at the kernel level. Best-effort
# defense in depth; the load-bearing tamper-evidence is the per-line
# hash chain, not the file flag.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bench]]
name = "recall"
harness = false

# v0.7.0 D1 — cross-harness latency benchmark. Spawns the MCP stdio
# server with each of the four primary harnesses' clientInfo.name
# strings (`claude-code`, `cursor`, `vscode-anthropic`, `unknown`),
# measures `memory_capabilities` + `memory_recall` p50/p95/p99 per
# harness, writes `target/bench/harness-cross.json` and prints a
# markdown table. Fails on a 200ms p95 overshoot — loose budget; the
# strict 50ms recall p95 stays in `recall.rs`. Not on the required-
# checks list (per the D1 task spec); run manually before release with
# `cargo bench --bench harness_bench`.
[[bench]]
name = "harness_bench"
harness = false

# v0.7 J8 — AGE vs CTE kg_query depth-5 bench gate. Measures p50/p95/p99
# for both KgBackend variants on a 200-node fixture and asserts the AGE
# p95 is at least 30% faster than the CTE p95 (justifies the AGE
# complexity per the J8 spec). Soft skip when the Postgres/AGE fixture
# isn't reachable: prints "skipped" and exits 0 so CI can run the bench
# unconditionally and surface the skip as a workflow warning.
# Outputs `target/bench/age-vs-cte.json` + a markdown table to stdout.
# Run with `AI_MEMORY_TEST_AGE_URL=postgresql://... cargo bench
# --features sal-postgres --bench age_vs_cte`.
[[bench]]
name = "age_vs_cte"
harness = false

# v0.7.0 G9 — concurrent rerank throughput benchmark. Measures wall-clock
# time for N=8 parallel recall reranks under two strategies: per-request
# `CrossEncoder::rerank` (serializes through the per-candidate Mutex) vs.
# `BatchedReranker::rerank` (one tokenize + one forward pass per worker
# tick). Default model is Lexical (fast, deterministic, no download).
# Set `AI_MEMORY_BENCH_NEURAL=1` to exercise the BERT path that the
# coalescer actually optimises — that's where the documented ~3× win
# materialises. Not on the required-checks list; run manually with
# `cargo bench --bench reranker_throughput`.
[[bench]]
name = "reranker_throughput"
harness = false

# v0.7.0 Task 7/8 (issue #655, recursive-learning ship-gate) —
# `db::reflect_with_hooks` end-to-end microbenchmark. Pins the
# v0.7.x+ regression baseline for the substrate-native recursive-
# refinement primitive at three source-fanout points (1, 3, 7).
# Run with `cargo bench --bench reflect`.
[[bench]]
name = "reflect"
harness = false

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/ai-memory-{ target }.tar.gz"
bin-dir = "ai-memory"
pkg-fmt = "tgz"

[patch.crates-io]
# C1 — `paste` 1.x is unmaintained (RUSTSEC-2024-0436). The recommended
# migration target is `pastey`, a community-maintained drop-in fork on
# crates.io. Cargo's `[patch.crates-io]` rejects a same-source
# registry-to-registry rename (it requires the patch source to differ
# from the registry), so two viable swap paths exist:
#
#   1. Vendor a chosen pastey release into `vendor/pastey/` and patch
#      from a `path = "vendor/pastey"` entry. This is the audit-clean
#      path: the third-party source lands in-tree under our review and
#      is rebuildable offline.
#
#   2. Patch from a vetted git mirror under our control (e.g. fork
#      `pastey` into `alphaonedev/pastey` then pin a tag here). Avoids
#      vendoring but adds a second fork to maintain.
#
# Until either path lands, we hold on the existing alphaonedev/paste
# fork pinned to rev `6a30252`. That fork is the maintained substitute
# under our org's control and addresses the RUSTSEC advisory by
# pointing cargo-audit at code we attest to. No direct caller in this
# repo invokes `paste::paste!`; the substitution only feeds transitive
# consumers (gemm-*, candle-*, etc.).
paste = { git = "https://github.com/alphaonedev/paste", rev = "6a30252" }

[profile.release]
opt-level = 3
strip = true
lto = "thin"
