# Copyright 2026 AlphaOne LLC
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-memory-mcp"
version = "0.6.4"
description = "Python SDK for the ai-memory HTTP API (persistent memory for AI agents)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AlphaOne LLC" }]
keywords = ["ai-memory", "mcp", "memory", "agents", "llm", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/alphaonedev/ai-memory-mcp"
Source = "https://github.com/alphaonedev/ai-memory-mcp"
Issues = "https://github.com/alphaonedev/ai-memory-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_memory*"]

[tool.setuptools.package-data]
ai_memory = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
